--- a/Practica4/Parte2/explicacion.tex
+++ b/Practica4/Parte2/explicacion.tex
@@ -25,22 +25,27 @@
 
 
 %%
-%% WinMIPS64 definition (c) 2013
+%% WinMIPS64 definition (c) 2020
 \lstdefinelanguage{WinMIPS64}
  {morekeywords={%
-DADD,DADDI,ANDI,XORI,HALT,BEQ,BNEQ,LD,NOP,DMUL,DSUB,AND,DDIV,%
-	J,DSLL,BNEZ,SD},%
- otherkeywords={.word,.code,.data,.text},%
+cvt.l.d,cvt.d.l,mfc1,mtc1,DADD,DADDI,ANDI,XORI,HALT,BEQ,BNEQ,LD,NOP,DMUL,DSUB,AND,DDIV,%
+	JAL,J,DSLL,BNEZ,SD, JR, BEQZ, cvt.d.l, cvt.l.d, lwu},%
+ otherkeywords={.word,.code,.data,.text, .asciiz, .ascii, .word32 },%
    sensitive=false,%
    morecomment=[l]{;},%
    morestring=[b]",%
  }
 
 \lstset{emph={%  
+    F0,F1,F2,F3,F4,F5,F6,F7,F8,F9,F10,F11,F12,F13,F14,F15,F16,F17,F18,F19%
+    F20,F21,F22,F23,F24,F25,F26,F27,F28,F29,F30,F31%
+    f0,f1,f2,f3,f4,f5,f6,f7,f8,f9,f10,f11,f12,f13,f14,f15,f16,f17,f18,f19%
+    f20,f21,f22,f23,f24,f25,f26,f27,f28,f29,f30,f31%
     R0,R1,R2,R3,R4,R5,R6,R7,R8,R9,R10,R11,R12,R13,R14,R15,R16,R17,R18,R19%
     R20,R21,R22,R23,R24,R25,R26,R27,R28,R29,R30,R31%
     r0,r1,r2,r3,r4,r5,r6,r7,r8,r9,r10,r11,r12,r13,r14,r15,r16,r17,r18,r19%
     r20,r21,r22,r23,r24,r25,r26,r27,r28,r29,r30,r31%
+	$0,$zero,$s0,$s1,$s2,$s3,$s4,$s5,$s6,$s7,$sp,$ra,$t1%
     },emphstyle={\color{red}\bfseries}%
 }%
 
@@ -48,6 +53,8 @@ DADD,DADDI,ANDI,XORI,HALT,BEQ,BNEQ,LD,NOP,DMUL,DSUB,AND,DDIV,%
 %    .code,.data,.word
 %    },emphstyle={\color{green}\bfseries}%
 %}%
+\title{Practica 5 - WinMIPS64 - Pila}
+
 \title{Practica 4 - WinMIPS64}
 %\author{Juan Antonio Zubimendi\\azubimendi@lifia.info.unlp.edu.ar}
 
