--- a/Practica6/Parte1/explicacion.tex
+++ b/Practica6/Parte1/explicacion.tex
@@ -175,7 +175,7 @@
 \item Cada etapa se ejecuta en un ciclo de reloj, salvo algunas operaciones aritmeticas de punto flotante, que tienen unidades de ejecuciión separadas
 \item Las etapas de cada uniad de ejecución dependen de la operación a realizar:
 \begin{itemize}
-\item Suma se realiza en 4 ciclos, con 4 etapas
+\item Suma (PF) se realiza en 4 ciclos, con 4 etapas
 \item Multiplicación se realiza en 7 ciclos, con 7 etapas
 \item División se realiza en 24 ciclos, 1 etapa
 \end{itemize}
