--- a/Previas2024/Practica3/Parte1/explicacion.tex
+++ b/Previas2024/Practica3/Parte1/explicacion.tex
@@ -48,7 +48,7 @@
 %\begin{block}{Slot Accounting System}
 \begin{itemize}
  \item Significa Entrada / Salida Programable
- \item MSX88 posee 2 puertos de entrada/salida de proposito general:
+ \item VonSim posee 2 puertos de entrada/salida de proposito general:
  \begin{itemize}
    \item Cada puerto es independiente y los llamamos puerto A y B
    \item Cada puerto es de 8 bits 
@@ -79,7 +79,7 @@ Notar que la noción de entrada y salida es relativa a la CPU
  \end{itemize}
  \end{itemize}
 \begin{center}
- \includegraphics[scale=0.50]{pio.png}
+ \includegraphics[scale=0.50]{pio_vonsim.png}
 \end{center}
 %\end{block}
 \end{frame}
@@ -106,11 +106,10 @@ Notar que la noción de entrada y salida es relativa a la CPU
 \begin{itemize}
   \item El simulador permite conectar el PIO de dos maneras diferentes:
   \begin{itemize}
-    \item Modo 0: Conectado a una barra de leds y una barra de interruptores
-    \item Modo 1: Conectado a una impresora
+    \item Conectado a una barra de leds y una barra de interruptores
+    \item Conectado a una impresora
   \end{itemize}
-  \item Utilizando los comandos \emph{c0} y \emph{c1} cambiamos la configuración.
-  \item Para ver los dispositivos debemos usar el comando \emph{p1}
+  \item Utilizando el menú de configuración podemos cambiar que dispositivo usar.
 \end{itemize}
 \end{frame}
 
@@ -119,7 +118,6 @@ Notar que la noción de entrada y salida es relativa a la CPU
 \begin{frame}
 \frametitle{Conexión en el simulador}
 \begin{itemize}
-  \item Esta es la configuración 0, que se establece con el comando \emph{c0}.
   \item Cada bit del puerto de datos A se conecta a un interruptor.
   \begin{itemize}
       \item Un bit en 0 indicará un interruptor apagado, 1 en caso contrario.
@@ -136,7 +134,7 @@ Notar que la noción de entrada y salida es relativa a la CPU
 \begin{frame}
 \frametitle{Conexión en el simulador}
 \begin{center}
- \includegraphics[scale=0.75]{pio0.png}
+ \includegraphics[scale=0.75]{pio0_vonsim.png}
 \end{center}
 \end{frame}
 
@@ -161,14 +159,6 @@ OUT 33H, AL
 
 \end{frame}
 
-\subsection{Ejemplo}
-\begin{frame}
-\frametitle{Ejemplo}
-Veamos el Ejercicio 1c de la práctica en el simulador.
-
-Este ejemplo copia el estado de los interruptores en los leds.
-\end{frame}
-
 
 \section{Impresora}
 \subsection{Introducción}
@@ -183,15 +173,13 @@ Este ejemplo copia el estado de los interruptores en los leds.
       \item La linea de datos \emph{STROBE} debe estar siempre en 0, salvo cuando se envia el pulso, que se envia un 1, y luego vuelve a 0.
       \item Tiene un puerto de 8 bits donde recibe el caracter a imprimir
   \end{itemize}
- \item Podemos ver la salida del ``papel'' presionando F-5
- \item Podemos vaciar la salida de la impresora ejecutando el comando \emph{bi}
 \end{itemize}
 \end{frame}
 
 \begin{frame}
 \frametitle{Descripción}
 \begin{center}
- \includegraphics[scale=0.75]{impresora.png}
+ \includegraphics[scale=0.75]{impresora_vonsim.png}
 \end{center}
 \end{frame}
 
@@ -199,10 +187,10 @@ Este ejemplo copia el estado de los interruptores en los leds.
 \begin{frame}
 \frametitle{Conexión en el simulador}
   \begin{itemize}
-  \item En la configuración 1, que se establece con el comando \emph{c1}, esta conectada a través del PIO.
+  \item Podemos cambiar la configuración accediendo al menú.
 \end{itemize}
 \begin{center}
- \includegraphics[scale=0.75]{pio1.png}
+ \includegraphics[scale=0.45]{pio1_vonsim.png}
 \end{center}
 \end{frame}
 
@@ -286,7 +274,7 @@ Leemos la linea BUSY hasta que este en 0
 \begin{verbatim}
       ...
 POLL: IN AL, PA
-      AND AL, 1
+      TEST AL, 1
       JNZ POLL
       ...
 \end{verbatim}
@@ -328,14 +316,6 @@ Cargar el caracter en el puerto B del PIO
 \end{verbatim}
 \end{block}
 
-\end{frame}
-
-\subsection{Ejemplo}
-\begin{frame}
-\frametitle{Ejemplo}
-Veamos el Ejercicio 2b de la práctica en el simulador.
-
-Este ejemplo imprime ``ORGANIZACIÓN Y ARQUITECTURA DE COMPUTADORAS'' en la impresora.
 \end{frame}
 
 \end{document}
